# CO2-energy-gdp-by-country

./: .gitignore  1-dataset-construction.ipynb  2-data-analysis.ipynb  3-model-Kmean.ipynb  4-model-DBSCAN.ipynb  5-model-MeanShift.ipynb  6-model-SpectralClustering.ipynb  7-results.ipynb  8-animation.ipynb  README.md  functions.py  index.html  pyproject.toml
data/: countries-list.txt  kaya-co2-codebook.csv  kaya_dataset.csv  world_countries.csv  world_map.json
notebooks/: 1-dataset-construction.ipynb  2-data-analysis.ipynb  3-model-Kmean.ipynb  4-model-DBSCAN.ipynb  5-model-MeanShift.ipynb  6-model-SpectralClustering.ipynb  7-results.ipynb  8-animation.ipynb
outputs/: clusters_stats.ods  iso_code.js  outliers_countries.csv  selected_countries.csv  tooltip.js  world_map.html
results/: clusters_stats.csv  outliers_countries.csv  selected_countries.csv  world_map.html
utils/: display.py  preprocessing.py  scores.py  world_map.py
