[project]
name = "co2emissions-per-country"
version = "0.1.0"
description = ""
authors = [
    {name = "Christophe Vellen",email = "christophe.vellen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
